# emulation

./: .gitignore  README.md
DPI_verilator/adder/hdl/: adder.v  bfm.sv
DPI_verilator/adder_c/: README.md  sim_main.cpp  trans.cpp  trans.sv
DPI_verilator/adder_pybind/: Makefile  README.md  test_adder.py  wrapper.cpp
DPI_verilator/adder_pybind/hdl/: bfm.v  wrapper.sv
DPI_verilator/adder_pybind_string/: CMakeLists.txt  Makefile  README.md  sim_main.cpp  wrapper.cpp
DPI_verilator/adder_pybind_string/hdl/: wrapper.sv
adder/hdl/emu/: MyTopLevel.v
adder/hdl/sim/: bfm.v  wrapper.v
dpi_test/: Dockerfile  README.md  sim_main.cpp  test.py  test_adder.py
dpi_test/hdl/: bfm.sv  our.sv  rand_array.sv
hdl/emu/: bfm.v  wrapper_v1_0.v
hdl/sim/: wrapper.v
interface/: README.md  sim_main.cpp  test.sv  tlm.cpp  tlm.h  tlm.sv
interface/gpt/: README.MD  counter_8bit.v  main.cpp
interface/sc-test/: Makefile  main.cpp
interface/sc-test/example/: README.MD
interface/sc-test/example/adder/: Makefile  Makefile.config  main.cpp
interface/sc-test/example/adder_with_verilator/: counter.v  main.cpp
tiny_alu/hdl/emu/: bfm.v
